# solocoder-5505-rust-cmdtool

./: Cargo.toml
split_test/: small.csv
split_test2/: data.csv
src/: main.rs
src/cmds/: csvkit.rs  finddup.rs  mod.rs  recent.rs  rename.rs  tree.rs
src/core/: config.rs  error.rs  exit.rs  history.rs  logger.rs  mod.rs  signal.rs
