[package]
name = "rtool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
walkdir = "2"
chrono = "0.4"
sha2 = "0.10"
csv = "1"
dirs = "6"
ctrlc = "3"
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"
atty = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
